# powertop

./: .gitignore  README.md  compile_commands.json  local.md  meson.build  meson_options.txt  release-checklist.md
.gemini/: GEMINI.md  styleguide.md
.github/workflows/: build.yml
doc/: powertop.8  relnotes.md
po/: LINGUAS  POTFILES.in  ca.po  cs_CZ.po  de_DE.po  en_GB.po  en_US.po  es_ES.po  hu_HU.po  id_ID.po  meson.build  nl_NL.po  powertop.pot  pt_PT.po  zh_TW.po
review/: class.md  general-c++.md  overflows.md  review.md  rules.md  style.md  tools.md
scripts/: valgrind.supp
scripts/test_tools/: trace_tool.py
src/: Makefile.am  devlist.cpp  devlist.h  display.cpp  display.h  gpu-tab.cpp  gpu-tab.h  lib.cpp  lib.h  main.cpp  test_framework.cpp  test_framework.h
src/calibrate/: calibrate.cpp  calibrate.h
src/cpu/: abstract_cpu.cpp  cpu.cpp  cpu.h  cpu_core.cpp  cpu_linux.cpp  cpu_package.cpp  cpu_rapl_device.cpp  cpu_rapl_device.h  cpudevice.cpp  cpudevice.h  dram_rapl_device.cpp  dram_rapl_device.h  frequency.h  intel_cpus.cpp  intel_cpus.h  intel_gpu.cpp  xe_gpu.cpp
src/devices/: ahci.cpp  ahci.h  alsa.cpp  alsa.h  backlight.cpp  backlight.h  devfreq.cpp  devfreq.h  device.cpp  device.h  device_manager.cpp  gpu_rapl_device.cpp  gpu_rapl_device.h  i915-gpu.cpp  i915-gpu.h  network.cpp  network.h  usb.cpp  (+11 more)
tests/: test_helper.h  testdesign.md
tests/lib/: meson.build  test_lib_misc.cpp  test_lib_pci.cpp  test_lib_system.cpp  test_read_file_content.cpp
tests/lib/data/: replay_exists.ptrecord  replay_notfound.ptrecord  replay_time.ptrecord  sample.txt
(+146 files in other folders)
